# Vole-Machine

./: ALU.cpp  ALU.h  CMakeLists.txt  CPU.cpp  CPU.h  Instructions.cpp  Instructions.h  Memory.cpp  Memory.h  README.md  Registers.cpp  Registers.h  expected_output1.txt  main.cpp  ram.cpp  ram.h  test_cas1.txt  test_case2.txt
